--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
-
-table {
+table.cube {
     border-collapse: collapse;
     margin: 0px;
     padding: 0px;
 }
-td {
+td.cube {
     margin: 0px;
     padding: 0px;
 }
@@ -34,4 +33,9 @@ button.color4 {
 }
 button.color5 {
     background-color: yellow;
+}
+
+button.rotation {
+    width: 100%;
+    height: 100%;
 }
