--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,10 @@ button.rotation {
     width: 100%;
     height: 100%;
 }
+
+#solutions_header {
+    margin-bottom: 0px;
+}
+#solutions_list {
+    margin-top: 0px;
+}
