--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,8 @@ td.cubeCell {
     height: 40px;
 }
 button.cubeButton {
+    color: #000000;
+    font-size: 24px;
     width: 100%;
     height: 100%;
 }
